rename git fabrux to Presto

--- a/apps/wemoagent/README
+++ b/apps/wemoagent/README
@@ -1,4 +1,4 @@
-Radio Thermostat of America - Example Application
+WEMO Smart Plug - Example Application
 ==================================================
 
 This is an agent that manages belkin WEMO
